[gd_scene load_steps=7 format=2]

[ext_resource path="res://Nodes/Buildings/Turret/TurretFlamer.png" type="Texture2D" id=1]
[ext_resource path="res://Nodes/Buildings/Turret/TurretBase.png" type="Texture2D" id=2]
[ext_resource path="res://Nodes/Buildings/Icons/GenericPreview.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Buildings/Common/AngleIndicator.png" type="Texture2D" id=4]
[ext_resource path="res://Resources/Textures/1px.png" type="Texture2D" id=5]
[ext_resource path="res://Resources/Materials/BoundingRectangle.tres" type="Material" id=6]

[node name="Sprite2D" type="Sprite2D"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Top" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 10, 0 )

[node name="AngleIndicator" type="Sprite2D" parent="."]
visible = false
position = Vector2( 500, 0 )
texture = ExtResource( 4 )

[node name="BoundingRect" type="Sprite2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
material = ExtResource( 6 )
position = Vector2( 9.84432, 0.433281 )
scale = Vector2( 576.668, 319.118 )
z_index = -1
texture = ExtResource( 5 )
