[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Materials/BoundingRectangle.tres" type="Material" id=1]
[ext_resource path="res://Nodes/Buildings/Icons/GenericPreview.gd" type="Script" id=2]
[ext_resource path="res://Nodes/Buildings/Storage/ItemRack.png" type="Texture2D" id=3]
[ext_resource path="res://Resources/Textures/1px.png" type="Texture2D" id=4]

[node name="Icon" type="Sprite2D"]
script = ExtResource( 2 )
use_sprite_for_scale = true

[node name="BoundingRect" type="Sprite2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
material = ExtResource( 1 )
use_parent_material = true
position = Vector2( 0, -1.43051e-06 )
scale = Vector2( 20, 20 )
z_index = -1
texture = ExtResource( 4 )

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
scale = Vector2( 0.0339474, 0.0339474 )
texture = ExtResource( 3 )

[node name="GroundRect" type="Sprite2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
material = ExtResource( 1 )
use_parent_material = true
position = Vector2( -9.53674e-07, 3.57628e-07 )
scale = Vector2( 20, 20 )
z_index = -1
texture = ExtResource( 4 )
